// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stepper renders correctly 1`] = `
.emotion-0 {
  height: 48px;
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
}

.emotion-1 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
  border: 1px solid #d4dae7;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  padding-right: 16px;
  padding-left: 16px;
  position: relative;
  border-right-width: 0;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.emotion-1:hover>svg,
.emotion-1:focus>svg {
  fill: #4f0599;
}

.emotion-2 {
  fill: lightGrey;
  vertical-align: middle;
  height: 28px;
  width: 28px;
  min-width: 28px;
  min-height: 28px;
}

.emotion-3 {
  position: absolute;
  font-size: 30px;
  top: 5px;
  font-weight: 500;
  color: #d4dae7;
  right: 0;
}

.emotion-4 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border: 1px solid #d4dae7;
  border-left-width: 0;
  border-right-width: 0;
}

.emotion-4:active {
  opacity: 0.5;
}

.emotion-5 {
  pointer-events: none;
  color: #4a4f62;
  background-color: #fff;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.emotion-7 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
  border: 1px solid #d4dae7;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  padding-right: 16px;
  padding-left: 16px;
  position: relative;
  border-left-width: 0;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.emotion-7:hover>svg,
.emotion-7:focus>svg {
  fill: #4f0599;
}

.emotion-8 {
  position: absolute;
  font-size: 30px;
  top: 5px;
  font-weight: 500;
  color: #d4dae7;
  left: 0;
}

<div
  className="sui-box emotion-0"
>
  <button
    aria-label="Minus"
    className="sui-box emotion-1"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <svg
      className="sui-box sc-ui-icon emotion-2"
      viewBox="0 0 24 24"
    >
      <path
        d="M19,13H5V11H19V13Z"
      />
    </svg>
    <span
      className="emotion-3"
    >
      |
    </span>
  </button>
  <button
    className="sui-box emotion-4"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <input
      className="emotion-5"
      disabled={false}
      name="stepper"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      style={
        Object {
          "width": 35,
        }
      }
      value="10"
    />
    <span
      className="emotion-5"
    >
      unit
    </span>
  </button>
  <button
    aria-label="Plus"
    className="sui-box emotion-7"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span
      className="emotion-8"
    >
      |
    </span>
    <svg
      className="sui-box sc-ui-icon emotion-2"
      viewBox="0 0 24 24"
    >
      <path
        d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
      />
    </svg>
  </button>
</div>
`;

exports[`Stepper renders correctly disabled 1`] = `
.emotion-0 {
  height: 48px;
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
}

.emotion-1 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  opacity: 0.5;
  border: 1px solid #d4dae7;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  padding-right: 16px;
  padding-left: 16px;
  position: relative;
  border-right-width: 0;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
  background-color: #f6f5f7;
  border: none;
  color: #b2b6c3;
  opacity: 1;
  cursor: not-allowed;
}

.emotion-1:hover>svg,
.emotion-1:focus>svg {
  fill: ;
}

.emotion-2 {
  fill: lightGrey;
  vertical-align: middle;
  height: 28px;
  width: 28px;
  min-width: 28px;
  min-height: 28px;
}

.emotion-3 {
  position: absolute;
  font-size: 30px;
  top: 5px;
  font-weight: 500;
  color: #d4dae7;
  right: 0;
}

.emotion-4 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  touch-action: manipulation;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border: 1px solid #d4dae7;
  border-left-width: 0;
  border-right-width: 0;
  background-color: #f6f5f7;
  border: none;
  color: #b2b6c3;
  opacity: 1;
  cursor: not-allowed;
}

.emotion-4:active {
  opacity: 0.5;
}

.emotion-5 {
  pointer-events: none;
  color: #4a4f62;
  background-color: #fff;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
  background-color: #f6f5f7;
  border: none;
  color: #b2b6c3;
  opacity: 1;
  cursor: not-allowed;
}

.emotion-7 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  opacity: 0.5;
  border: 1px solid #d4dae7;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  padding-right: 16px;
  padding-left: 16px;
  position: relative;
  border-left-width: 0;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  background-color: #f6f5f7;
  border: none;
  color: #b2b6c3;
  opacity: 1;
  cursor: not-allowed;
}

.emotion-7:hover>svg,
.emotion-7:focus>svg {
  fill: ;
}

.emotion-8 {
  position: absolute;
  font-size: 30px;
  top: 5px;
  font-weight: 500;
  color: #d4dae7;
  left: 0;
}

<div
  className="sui-box emotion-0"
>
  <button
    aria-label="Minus"
    className="sui-box emotion-1"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <svg
      className="sui-box sc-ui-icon emotion-2"
      viewBox="0 0 24 24"
    >
      <path
        d="M19,13H5V11H19V13Z"
      />
    </svg>
    <span
      className="emotion-3"
    >
      |
    </span>
  </button>
  <button
    className="sui-box emotion-4"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <input
      className="emotion-5"
      disabled={true}
      name="stepper"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyPress={[Function]}
      style={
        Object {
          "width": 35,
        }
      }
      value="10"
    />
    <span
      className="emotion-5"
    >
      unit
    </span>
  </button>
  <button
    aria-label="Plus"
    className="sui-box emotion-7"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    <span
      className="emotion-8"
    >
      |
    </span>
    <svg
      className="sui-box sc-ui-icon emotion-2"
      viewBox="0 0 24 24"
    >
      <path
        d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
      />
    </svg>
  </button>
</div>
`;
